# stm32h7-multifx-pedal

./: .gitignore  CMakeLists.txt  README.md  STM32H743VITX_FLASH.ld  STM32H743VITX_RAM.ld
Core/Effects/: dsp.cpp  dsp.hpp  effectsChain.cpp  effectsChain.hpp  pedals.cpp  pedals.hpp
Core/Effects/Inc/: PedalType.hpp  effectsChain.hpp  pedals.hpp
Core/Effects/Src/: PedalType.cpp  effectsChain.cpp  pedals.cpp
Core/Inc/: bitmaps.hpp  display.hpp  editPedal.hpp  main.h  mainApp.hpp  modPedal.hpp  qspi_flash.hpp  stm32h7xx_hal_conf.h
Core/Modules/: main.c  main.h  mainApp.cpp  mainView.cpp  modPedal.cpp  modPedal.hpp
Core/Modules/Hardware/: hw_audio.cpp  hw_audio.hpp  hw_clock.cpp  hw_clock.hpp  hw_config.cpp  hw_config.hpp  hw_dma.cpp  hw_dma.hpp  hw_gpio.cpp  hw_gpio.hpp  hw_mpu.cpp  hw_mpu.hpp  hw_spi.cpp  hw_spi.hpp  hw_timer.cpp  hw_timer.hpp
Core/Src/: bitmaps.cpp  display.cpp  editPedal.cpp  main.c  mainApp.cpp  modPedal.cpp  qspi_flash.cpp
Core/Startup/: startup_animation.cpp  startup_animation.hpp
Core/Utility/: bitmaps.cpp  bitmaps.hpp  common.hpp  display.cpp  display.hpp  qspi_flash.cpp  qspi_flash.hpp  stm32h7xx_hal_conf.h
Debug/: aether_pedal.elf  aether_pedal.list  aether_pedal.map  makefile  objects.list  sources.mk
Debug/Core/Src/: display.cyclo  display.d  display.su  main.cyclo  main.d  main.su  mainApp.cyclo  mainApp.d  mainApp.su  ssd1309_ll.d  stm32h7xx_hal_msp.d  stm32h7xx_it.d  subdir.mk
Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal_msp.c  stm32h7xx_it.c
Scripts/: compareSignals.py  plotanalysis.py  requirements.txt  simulateCompressor.py  simulateEcho.py  simulateNoiseGate.py  simulateOverdrive.py  simulateReverb.py
(+35 files in other folders)
